--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cheerio": "^0.20.0",
     "minimist": "^1.2.0",
+    "mongodb": "^2.1.13",
+    "mongoose": "^4.4.10",
     "request": "^2.69.0"
   }
 }
