--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.20.0",
+    "lodash-node": "^3.10.2",
     "minimist": "^1.2.0",
     "pg": "^4.5.3",
     "pg-hstore": "^2.3.2",
